--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 
     </head>
     <body>
-      
+      <h1>I like to make games on scratch...</h1>
+      <ol>
+          <li>Chicken Farm</li>
+          <li>Happy Survival</li>
+          <li>Escape the dungeon</li>
+          <li>Other stuff</li>
+      </ol>
     </body>
 
   </html>
